Min.Tests/Samples/ValidSamples/source-12.min
if 123 > 23:
    output "bigger than 23"
endif