Min.Tests/Samples/InvalidSamples/source-14.min
if 1 < 2:
    if 2 < 3:
        output "here"
endif